# djangocms-inspector

./: .gitignore  MANIFEST.in  Makefile  README.rst  cookiebaked.json  freezer.py  frozen.txt  setup.cfg  sphinx_reload.py
djangocms_inspector/: __init__.py  apps.py  urls.py
djangocms_inspector/management/commands/: inspect_plugins.py
djangocms_inspector/models/: article.py  blog.py
djangocms_inspector/templates/djangocms_inspector/: article_detail.html  base.html  blog_detail.html  blog_index.html  plugins_report.html
djangocms_inspector/templatetags/: djangocms_inspector.py
djangocms_inspector/views/: article.py  blog.py
docs/: conf.py  development.rst  django_settings.py  index.rst  install.rst  requirements.txt
docs/django_app/: models.rst
sandbox/: urls.py
sandbox/settings/: base.py
sandbox/templates/: skeleton.html
sandbox/templates/pages/: default.html  test.html
tests/: 0011_wsgi.py  conftest.py
tests/010_models/: 011_blog.py  012_article.py
tests/020_factories/: 021_blog.py  022_article.py
tests/030_views/: 031_blog.py  032_article.py
