;;
;; DjangoCMS Inspector package
;;
[metadata]
name = djangocms-inspector
version = 0.2.0-pre.2
description = Toolkit to ease some DjangoCMS usages
long_description = file:README.rst
long_description_content_type = text/x-rst
author = David Thenon
author_email = sveetch@gmail.com
url = https://github.com/sveetch/djangocms-inspector
project_urls =
    Source Code = https://github.com/sveetch/djangocms-inspector
    Issue Tracker = https://github.com/sveetch/djangocms-inspector/issues
    Changelog = https://djangocms-inspector.readthedocs.io/en/latest/history.html
    Documentation = https://djangocms-inspector.readthedocs.io/
license = MIT
keywords = Python Django
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Framework :: Django
    Framework :: Django :: 3.2
    Framework :: Django :: 4.0
    Framework :: Django :: 4.1

[options]
include_package_data = True
install_requires =
    Django>=3.2,<4.2
    django-cms
    requests
packages = find:
zip_safe = True

[options.extras_require]
dev =
    django-cms
    django-filer
    djangocms-picture
    djangocms-text-ckeditor
    djangocms-snippet
    pytest
    pytest-django
    factory-boy
    pyquery
    freezegun
quality =
    flake8
    tox
doc =
    sphinx>=4.3.0
    sphinx-rtd-theme==1.1.0
    livereload
release =
    twine

[options.packages.find]
where = .
exclude=
    data
    docs
    tests
    sandbox

[wheel]
universal = 0

;;
;; Third-party packages configuration
;;
[flake8]
max-line-length = 88
exclude =
    .git,
    .venv,
    build,
    __pycache__
    */migrations/*

[tool:pytest]
DJANGO_SETTINGS_MODULE = sandbox.settings.tests
addopts = -vv
python_files =
    *.py
testpaths =
    tests
filterwarnings =
    ignore::DeprecationWarning
    ignore::django.utils.deprecation.RemovedInDjango50Warning

[tox:tox]
minversion = 3.4.0
envlist = py{38,39,310}-django{32,40,41}

[testenv]

deps =
    django32: Django>=3.2,<4.0
    django40: Django>=4.0,<4.1
    django41: Django>=4.1,<4.2

commands =
    pip install -e .[dev]
    pytest -vv tests
